--- a/docker/services/frontend/html/config-embedder.html
+++ b/docker/services/frontend/html/config-embedder.html
@@ -429,6 +429,27 @@
 
         select.form-control {
             cursor: pointer;
+            appearance: none;
+            -webkit-appearance: none;
+            -moz-appearance: none;
+            background-image: url("data:image/svg+xml;charset=UTF-8,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24' fill='none' stroke='%23a78bfa' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'%3e%3cpolyline points='6 9 12 15 18 9'%3e%3c/polyline%3e%3c/svg%3e");
+            background-repeat: no-repeat;
+            background-position: right 0.7rem center;
+            background-size: 1em;
+            padding-right: 2.5rem;
+        }
+
+        select.form-control option {
+            background-color: #1a1a2e;
+            color: #e8e8e8;
+            padding: 0.5rem;
+        }
+
+        select.form-control option:hover,
+        select.form-control option:focus,
+        select.form-control option:checked {
+            background-color: #2a2a4e;
+            color: #a78bfa;
         }
 
         /* Info Box */
